# text-classifier

./: pyproject.toml  text-classifier.ipynb
